--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,7 +16,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+    },
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
